<resources>
    <string name="app_name">Geography Quiz</string>
    <string name="first_q">1- What is the Capital of Egypt?</string>
    <string name="giza">Giza</string>
    <string name="cairo">Cairo</string>
    <string name="berlin">Berlin</string>
    <string name="second_q">2- What is the Capital of China?</string>
    <string name="paris">Paris</string>
    <string name="alexandria">Alexandria</string>
    <string name="beijing">Beijing</string>
    <string name="seoul">Seoul</string>
    <string name="third_q">3- What is the Capital of Australia?</string>
    <string name="liberia">Liberia</string>
    <string name="australia">Australia</string>
    <string name="sydney">sydney</string>
    <string name="chad">Chad</string>
    <string name="fourth_q">4- What is the Capital of Spain?</string>
    <string name="madrid">Madrid</string>
    <string name="conakry">Conakry</string>
    <string name="paramaribo">Paramaribo</string>
    <string name="helsinki">Helsinki</string>
    <string name="fifth_q">5- What is the Capital of Iraq?</string>
    <string name="tunis">Tunis</string>
    <string name="pristina">Pristina</string>
    <string name="baghdad">Baghdad</string>
    <string name="taipei">Taipei</string>
    <string name="sixth_q">6- What is the Capital of Ghana?</string>
    <string name="bucharest">Bucharest</string>
    <string name="accra">Accra</string>
    <string name="victoria">Victoria</string>
    <string name="seventh_q">7- What is the Capital of Canada?</string>
    <string name="rabat">Rabat</string>
    <string name="brasilia">Brasilia</string>
    <string name="muscat">Muscat</string>
    <string name="ottawa">Ottawa</string>
    <string name="submit">Submit</string>
    <string name="name">NAME</string>
    <string name="id">ID</string>
    <string name="class_a">Class A</string>
    <string name="class_b">Class B</string>
    <string name="start">Start</string>
    <string name="class_c">Class C</string>
    <string name="fire" />
    <string name="dialog_fire_missiles" />
    <string name="cancel" />
    <string name="eighth_q">8- What wonders does Egypt have?</string>
    <string name="question_8_ans_a">a- Great Pyramid</string>
    <string name="question_8_ans_b">b- Alexandria Lighthouse</string>
    <string name="question_8_ans_c">c- Taj Mahal</string>
    <string name="question_8_ans_d">d- Pyramids</string>
    <string name="ninth_q">9- Where\'s Taj Mahal?</string>
    <string name="tenth_q">10- What is the tallest river in the world?</string>
    <string name="answer">Answer</string>
</resources>
