<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.abdel.geography_quiz.MainActivity"
    android:background="@drawable/map">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:ems="25"
        android:inputType="textPersonName"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:ems="6"
        android:inputType="textPersonName"
        android:hint="@string/id" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="35dp"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/classA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/class_a" />

            <RadioButton
                android:id="@+id/classB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/class_b"
                tools:text="Class B" />

            <RadioButton
                android:id="@+id/classC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/class_c" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/start"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="18sp"
        android:visibility="visible"
        android:onClick="onClick"
        android:layout_gravity="center"
        >
    </Button>
</LinearLayout>
</ScrollView>
